--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controller.activities.TeamDetail">
+    tools:context=".controller.activities.ProductDetail">
 
     <ImageView
         android:id="@+id/ivLogoDetail"
