--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controller.fragments.TeamFragment">
+    tools:context=".controller.fragments.ProductFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTeams"
