--- a/app/src/main/res/layout/fragment_save.xml
+++ b/app/src/main/res/layout/fragment_save.xml
@@ -6,7 +6,7 @@
     tools:context=".controller.fragments.SaveFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTeamSave"
+        android:id="@+id/rvProductSave"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
