--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -6,7 +6,7 @@
     tools:context=".controller.fragments.ProductFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTeams"
+        android:id="@+id/rvProducts"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
