--- a/app/src/main/res/layout/prototype_product.xml
+++ b/app/src/main/res/layout/prototype_product.xml
@@ -16,25 +16,26 @@
             android:id="@+id/ivLogo"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="56dp"
             android:layout_marginTop="32dp"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
             android:textStyle="italic"
             app:layout_constraintStart_toEndOf="@+id/ivLogo"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Nombre equipo" />
+            tools:text="product name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
